# python-project-lvl1

./: .codeclimate.yml  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: answer_checker.py  cli.py  engine.py
brain_games/games/: calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
